--- a/app/lol/src/main/res/layout/activity_main.xml
+++ b/app/lol/src/main/res/layout/activity_main.xml
@@ -13,7 +13,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:spanCount="3"
             tools:listitem="@layout/vh_champion" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
