--- a/app/lol/src/main/res/layout/vh_champion.xml
+++ b/app/lol/src/main/res/layout/vh_champion.xml
@@ -21,9 +21,9 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/iv_champion"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:adjustViewBounds="true"
             app:layout_constraintTop_toTopOf="parent"
             app:loadImage="@{champion.image.getChampionSquareImage(champion.version)}"
             tools:background="@tools:sample/avatars" />
@@ -32,10 +32,11 @@
             android:id="@+id/tv_champion_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
             android:text="@{champion.name}"
-            app:layout_constraintStart_toEndOf="@id/iv_champion"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_champion"
             tools:text="champion name" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
