--- a/app/lol/src/main/res/layout/fragment_champion_list.xml
+++ b/app/lol/src/main/res/layout/fragment_champion_list.xml
@@ -8,7 +8,7 @@
         android:layout_height="match_parent"
         android:focusable="true"
         android:focusableInTouchMode="true"
-        tools:context=".ui.ChampionListFragment">
+        tools:context=".ui.fragments.ChampionListFragment">
 
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/et_search_champion"
@@ -24,6 +24,7 @@
             android:layout_height="0dp"
             android:orientation="vertical"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/et_search_champion"
             app:spanCount="3"
             tools:listitem="@layout/vh_champion" />
