--- a/app/lol/src/main/res/layout/vh_champion_skin.xml
+++ b/app/lol/src/main/res/layout/vh_champion_skin.xml
@@ -32,7 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="@{skin.name}"
+            android:text="@{skin.name.equals(&quot;default&quot;) ? name : skin.name}"
             app:layout_constraintTop_toBottomOf="@id/iv_champion_skin_image"
             tools:text="champion skin" />
     </androidx.constraintlayout.widget.ConstraintLayout>
