--- a/app/lol/src/main/res/layout/vh_champion_passive.xml
+++ b/app/lol/src/main/res/layout/vh_champion_passive.xml
@@ -8,6 +8,10 @@
         <variable
             name="passive"
             type="com.domain.lol.dto.Passive" />
+
+        <variable
+            name="version"
+            type="String" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -20,7 +24,7 @@
             android:layout_height="100dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:loadImage="@{passive.image.getChampionPassiveImage()}"
+            app:loadImage="@{passive.image.getChampionPassiveImage(version)}"
             tools:background="@tools:sample/avatars" />
 
         <androidx.appcompat.widget.AppCompatTextView
