--- a/app/lol/src/main/res/menu/bottom_menu.xml
+++ b/app/lol/src/main/res/menu/bottom_menu.xml
@@ -11,4 +11,10 @@
         android:enabled="true"
         android:icon="@drawable/ic_launcher_background"
         android:title="아이템" />
+
+    <item
+        android:id="@+id/settingFragment"
+        android:enabled="true"
+        android:icon="@drawable/ic_launcher_background"
+        android:title="셋팅" />
 </menu>
