인피니티 뷰페이저와 어탭터 파라메터 변경

--- a/app/lol/src/main/res/layout/fragment_champion_detail.xml
+++ b/app/lol/src/main/res/layout/fragment_champion_detail.xml
@@ -8,10 +8,6 @@
         <variable
             name="champion"
             type="com.domain.lol.dto.ChampionDetail" />
-
-        <variable
-            name="version"
-            type="String" />
     </data>
 
     <ScrollView
@@ -29,7 +25,7 @@
                 android:adjustViewBounds="true"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:loadImage="@{champion.image.getChampionSquareImage(version)}"
+                app:loadImage="@{champion.image.getChampionSquareImage()}"
                 tools:background="@tools:sample/avatars" />
 
             <androidx.appcompat.widget.AppCompatTextView
