--- a/app/lol/src/main/res/layout/fragment_setting.xml
+++ b/app/lol/src/main/res/layout/fragment_setting.xml
@@ -6,10 +6,24 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tv_setting_version"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:text="버전 설정"
+            app:layout_constraintBottom_toBottomOf="@id/spinner_version"
+            app:layout_constraintEnd_toStartOf="@id/spinner_version"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/spinner_version" />
+
         <androidx.appcompat.widget.AppCompatSpinner
             android:id="@+id/spinner_version"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/tv_setting_version"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
