--- a/app/lol/src/main/res/layout/vh_champion_passive.xml
+++ b/app/lol/src/main/res/layout/vh_champion_passive.xml
@@ -8,10 +8,6 @@
         <variable
             name="passive"
             type="com.domain.lol.dto.Passive" />
-
-        <variable
-            name="version"
-            type="String" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -24,7 +20,7 @@
             android:layout_height="100dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:loadImage="@{passive.image.getChampionPassiveImage(version)}"
+            app:loadImage="@{passive.image.getChampionPassiveImage()}"
             tools:background="@tools:sample/avatars" />
 
         <androidx.appcompat.widget.AppCompatTextView
