--- a/app/lol/src/main/res/layout/vh_champion.xml
+++ b/app/lol/src/main/res/layout/vh_champion.xml
@@ -25,7 +25,7 @@
             android:layout_height="match_parent"
             android:adjustViewBounds="true"
             app:layout_constraintTop_toTopOf="parent"
-            app:loadImage="@{champion.image.getChampionSquareImage(champion.version)}"
+            app:loadImage="@{champion.image.getChampionSquareImage()}"
             tools:background="@tools:sample/avatars" />
 
         <androidx.appcompat.widget.AppCompatTextView
