--- a/app/lol/src/main/res/layout/vh_champion_skin.xml
+++ b/app/lol/src/main/res/layout/vh_champion_skin.xml
@@ -8,10 +8,6 @@
         <variable
             name="skin"
             type="com.domain.lol.dto.Skin" />
-
-        <variable
-            name="name"
-            type="String" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -24,7 +20,7 @@
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             app:layout_constraintTop_toTopOf="parent"
-            app:loadImage="@{skin.getChampionSkinImageUrlList(name)}"
+            app:loadImage="@{skin.getChampionSkinImageUrl()}"
             tools:background="@tools:sample/avatars" />
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -32,7 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="@{skin.name.equals(&quot;default&quot;) ? name : skin.name}"
+            android:text="@{skin.name.equals(&quot;default&quot;) ? skin.championName : skin.name}"
             app:layout_constraintTop_toBottomOf="@id/iv_champion_skin_image"
             tools:text="champion skin" />
     </androidx.constraintlayout.widget.ConstraintLayout>
