--- a/app/lol/src/main/res/menu/bottom_menu.xml
+++ b/app/lol/src/main/res/menu/bottom_menu.xml
@@ -3,18 +3,18 @@
     <item
         android:id="@+id/championListFragment"
         android:enabled="true"
-        android:icon="@drawable/ic_launcher_background"
+        android:icon="@drawable/icon_person"
         android:title="챔피언" />
 
     <item
         android:id="@+id/gameItemListFragment"
         android:enabled="true"
-        android:icon="@drawable/ic_launcher_background"
+        android:icon="@drawable/icon_weapon"
         android:title="아이템" />
 
     <item
         android:id="@+id/settingFragment"
         android:enabled="true"
-        android:icon="@drawable/ic_launcher_background"
+        android:icon="@drawable/icon_setting"
         android:title="셋팅" />
 </menu>
