--- a/app/practice/src/main/res/layout/viewholder_load.xml
+++ b/app/practice/src/main/res/layout/viewholder_load.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="vh"
-            type="com.practice.paging.vh.LoadStateVH" />
+            type="com.practice.ui.vh.LoadStateVH" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
