--- a/app/practice/src/main/res/navigation/nav_graph.xml
+++ b/app/practice/src/main/res/navigation/nav_graph.xml
@@ -32,7 +32,7 @@
 
     <fragment
         android:id="@+id/wish"
-        android:name="com.practice.ui.fragments.WishPokemonList"
+        android:name="com.practice.ui.fragments.WishPokemonListFragment"
         tools:layout="@layout/fragment_wish_pokemon">
         <action
             android:id="@+id/action_wish_to_detail"
