--- a/app/lol/src/main/res/values/themes.xml
+++ b/app/lol/src/main/res/values/themes.xml
@@ -14,10 +14,37 @@
         <!-- Customize your theme here. -->
 
         <item name="android:textViewStyle">@style/BlackColorTextView</item>
+        <item name="bottomSheetDialogTheme">@style/RoundedBottomDialog</item>
     </style>
 
     <style name="BlackColorTextView">
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">20dp</item>
+    </style>
+
+    <style name="ShapeAppearanceOverlay.App.BottomCorner" parent="">
+        <item name="cornerFamilyBottomLeft">rounded</item>
+        <item name="cornerFamilyBottomRight">rounded</item>
+        <item name="cornerSizeBottomLeft">20%</item>
+        <item name="cornerSizeBottomRight">20%</item>
+    </style>
+
+    <style name="ShapeAppearanceOverlay.BottomSheetDialog.View" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">100%</item>
+    </style>
+
+    <style name="RoundedBottomDialog" parent="@style/ThemeOverlay.MaterialComponents.BottomSheetDialog">
+        <item name="bottomSheetStyle">@style/AppBottomSheetDialogTheme</item>
+    </style>
+
+    <style name="AppBottomSheetDialogTheme" parent="Widget.MaterialComponents.BottomSheet">
+        <item name="shapeAppearanceOverlay">@style/DialogCorner</item>
+    </style>
+
+    <style name="DialogCorner" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSizeTopLeft">20dp</item>
+        <item name="cornerSizeTopRight">20dp</item>
     </style>
 </resources>
