--- a/app/lol/src/main/res/layout/bottom_champion_info.xml
+++ b/app/lol/src/main/res/layout/bottom_champion_info.xml
@@ -17,14 +17,13 @@
             app:layout_constraintTop_toTopOf="parent"
             app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.BottomSheetDialog.View" />
 
-        <TextView
+        <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_content"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="5dp"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/v_icon" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
