--- a/app/lol/src/main/res/layout/dialog_confirm_dismiss.xml
+++ b/app/lol/src/main/res/layout/dialog_confirm_dismiss.xml
@@ -22,14 +22,13 @@
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tv_custom_dialog"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
+                android:gravity="center"
                 android:text="@{vm.message}"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="Hello, World!" />
         </androidx.constraintlayout.widget.ConstraintLayout>
